--- a/myinit.org
+++ b/myinit.org
@@ -1,15 +1,40 @@
-* editing code in org files
   | key     | description                                      |
   |---------+--------------------------------------------------|
   | C-c C-c | Eval code within BEGIN_SRC/END_SRC blocks        |
   | C-c '   | Open up a mini-buffer for editing the code block |
+
+* package
+#+BEGIN_SRC emacs-lisp
+  (require 'package)
+  (setq package-enable-at-startup nil)
+  (setcdr (last package-archives)
+          '(("melpa-stable" . "https://stable.melpa.org/packages/")
+            ("melpa" . "https://melpa.org/packages/")))
+
+  (package-initialize) ; most of this section's time is spent here
+  (setq package-check-signature nil)
+
+  (unless (package-installed-p 'use-package)
+    ;; check for new packages (package versions)
+    (message "%s" "Emacs Prelude is now refreshing its package database...")
+    (package-refresh-contents)
+    (message "%s" " done.")
+    (package-install 'use-package))
+
+  ;; see: https://github.com/jwiegley/use-package
+  ;(require 'use-package)
+
+  ;; after use-package-always-ensure is set, all subsequent use-package
+  ;; statements will download packages if needed
+  (setq use-package-always-ensure t)
+  (setq use-package-verbose t)
+#+END_SRC
 
 * cl and external load paths
 
 #+BEGIN_SRC emacs-lisp
 (require 'cl)
 (push "~/.emacs.d/external" load-path)  ; third party code that isn't in melpa-stable yet
-(isg/time-section "cl and external load paths")
 #+END_SRC
 
 * pomidor
@@ -59,22 +84,6 @@
   (mapcar (lambda (kons)
             (global-set-key (car kons) (cdr kons)))
           (isg/val 'key-setup)))
-
-(defun isg/run-machine-function (property)
-  (let ((fn (isg/val property)))
-    (if fn (funcall fn))))
-
-(defun isg/frame-setup ()
-  (when (and (isg/val 'frame-r) (isg/val 'frame-l))
-    (setq initial-frame-alist (isg/val 'frame-r)
-          default-frame-alist (isg/val 'frame-l)))
-  (add-to-list 'default-frame-alist
-               (cons 'font
-                     (isg/val 'default-font))))
-
-
-
-(isg/time-section "loading helper functions")
 #+END_SRC
 
 * machine settings
@@ -217,7 +226,6 @@
                                    which)))
   (load-settings (isg/default-machine-settings))
   (load-settings (isg/machine-settings)))
-(isg/time-section "machine-settings")
 #+END_SRC
 
 
@@ -236,7 +244,6 @@
    (setq word-wrap t))
  (add-hook 'org-mode-hook 'soft-wrap-lines)
 
- (isg/time-section "org")
  #+END_SRC
 
 ** ivy + swiper + counsel
@@ -248,7 +255,6 @@
    (ivy-mode 1)
    (setq ivy-use-virtual-buffers t))
 
- (isg/time-section "ivy")
 
  (use-package swiper
    :pin melpa-stable
@@ -257,7 +263,6 @@
                    (lambda ()
                      (interactive)
                      (swiper (format "%s" (or (thing-at-point 'symbol) ""))))))
- (isg/time-section "swiper")
 
  (use-package counsel
    :pin melpa-stable
@@ -278,7 +283,6 @@
    ;; I don't use these bindings - should learn what they do one day
    ;; (global-set-key (kbd "C-S-o") 'counsel-rhythmbox)
    (define-key read-expression-map (kbd "C-r") 'counsel-expression-history))
- (isg/time-section "counsel")
  #+END_SRC
 
 ** hydra
@@ -299,7 +303,6 @@
    (global-set-key "\C-c\C-v" 'magit-status)
    :config
    (setq magit-push-always-verify nil))
- (isg/time-section "magit")
  #+END_SRC
 
 * language modes
@@ -309,7 +312,6 @@
                           (setq comment-start "// "
                                 comment-end   "")
                           (highlight-thing-mode)))
- (isg/time-section "c")
  #+END_SRC
 ** clojure
    #+BEGIN_SRC emacs-lisp
@@ -320,7 +322,6 @@
    (add-hook 'cider-repl-mode-hook 'company-mode)
    (add-hook 'cider-mode-hook 'company-mode)
    (add-hook 'cider-mode-hook 'cider-turn-on-eldoc-mode))
- (isg/time-section "cider")
    #+END_SRC
 
    #+BEGIN_SRC emacs-lisp
@@ -332,7 +333,6 @@
    (pretty-fn))
 
  (setq nrepl-hide-special-buffers t)
- (isg/time-section "clojure-mode")
    #+END_SRC
 ** csharp 
  #+BEGIN_SRC emacs-lisp
@@ -342,7 +342,6 @@
    :init
    :config
    (setq default-tab-width 4))
- (isg/time-section "csharp-mode")
  #+END_SRC
 ** css
    #+BEGIN_SRC emacs-lisp
@@ -355,7 +354,6 @@
        (add-hook 'css-mode-hook 'rainbow-mode)
        (setq css-indent-offset 2))
      (add-to-list 'auto-mode-alist '("\\.less$" . css-mode))
-     (isg/time-section "css-mode")
    #+END_SRC
 ** glsl
  #+BEGIN_SRC emacs-lisp
@@ -366,7 +364,6 @@
           ("\\.geom\\'" . glsl-mode))
    :init
    (autoload 'glsl-mode "glsl-mode" nil t))
- (isg/time-section "glsl-mode")
  #+END_SRC
 ** go
  #+BEGIN_SRC emacs-lisp
@@ -375,12 +372,10 @@
    :mode "\\.go\\'"
    :config
    (add-hook 'before-save-hook #'gofmt-before-save))
- (isg/time-section "go-mode")
  #+END_SRC
 ** groovy
  #+BEGIN_SRC emacs-lisp
   (add-to-list 'auto-mode-alist '("\\.gradle$" . groovy-mode))
- (isg/time-section "groovy")
  #+END_SRC
 ** javascript
  #+BEGIN_SRC emacs-lisp
@@ -397,7 +392,6 @@
    (setq js-indent-level 2)
    (setq js2-global-externs '("require" "expect" "describe" "it" "beforeEach"))
    (define-key js2-mode-map (kbd "<tab>") #'company-indent-or-complete-common))
- (isg/time-section "js2-mode")
  #+END_SRC
 
 ** jsx
@@ -412,7 +406,6 @@
          (let ((web-mode-enable-part-face nil))
            ad-do-it)
        ad-do-it)))
- (isg/time-section "web-mode")
  #+END_SRC
 ** markdown
  #+BEGIN_SRC emacs-lisp
@@ -420,12 +413,10 @@
    :pin melpa-stable
    :mode (("\\.md\\'" . markdown-mode)
           ("\\.markdown\\'" . markdown-mode)))
- (isg/time-section "markdown-mode")
  #+END_SRC
 ** ruby
  #+BEGIN_SRC emacs-lisp
  (add-to-list 'auto-mode-alist '("Rakefile" . ruby-mode))
- (isg/time-section "ruby")
  #+END_SRC
 ** rust
  #+BEGIN_SRC emacs-lisp
@@ -461,14 +452,12 @@
                 (local-set-key (kbd "M-.") #'racer-find-definition)
                 (local-set-key (kbd "<tab>") #'company-indent-or-complete-common)
                 (local-set-key (kbd "C-c <tab>") #'rust-format-buffer))))
- (isg/time-section "rust-mode")
  #+END_SRC
 ** scheme
  #+BEGIN_SRC emacs-lisp
  (add-hook 'scheme-mode-hook
            (lambda ()
              (define-key scheme-mode-map (kbd ")") 'sp-up-sexp)))
- (isg/time-section "scheme")
  #+END_SRC
 ** seni
  #+BEGIN_SRC emacs-lisp
@@ -479,7 +468,6 @@
            (lambda ()
              (define-key seni-mode-map (kbd ")") 'sp-up-sexp)))
 
- (isg/time-section "seni")
  #+END_SRC
 ** shader-mode
  #+BEGIN_SRC emacs-lisp
@@ -487,7 +475,6 @@
    :mode "\\.shader\\'"
    :config
    (setq shader-indent-offset 2))
- (isg/time-section "shader-mode")
  #+END_SRC
 ** sql
  #+BEGIN_SRC emacs-lisp
@@ -499,20 +486,17 @@
               '("\\.psql$" . (lambda ()
                               (sql-mode)
                               (sql-highlight-postgres-keywords))))
- (isg/time-section "sql")
  #+END_SRC
 ** toml-mode
  #+BEGIN_SRC emacs-lisp
  (use-package toml-mode
    :mode "\\.toml\\'")
- (isg/time-section "toml-mode")
  #+END_SRC
 ** typescript
  #+BEGIN_SRC emacs-lisp
  (use-package typescript-mode
    :pin melpa-stable
    :mode "\\.ts\\'")
- (isg/time-section "typescript")
  #+END_SRC
 
 * theming
@@ -581,7 +565,6 @@ _DEL_: none
 
 (bind-keys ("C-c w t"  . isg/hydra-themes/body))
 
-(isg/time-section "color-theme")
 #+END_SRC
 
 * misc helper packages
@@ -591,7 +574,6 @@ _DEL_: none
    :pin melpa-stable
    :ensure auto-complete
    :defer t)
- (isg/time-section "auto-complete-config")
  #+END_SRC
 
 ** avy
@@ -599,7 +581,6 @@ _DEL_: none
  (use-package avy
    :pin melpa-stable
    :bind ("M-h" . avy-goto-char-timer))
- (isg/time-section "avy")
  #+END_SRC
 
 ** company
@@ -620,13 +601,11 @@ _DEL_: none
        
         (define-key company-active-map (kbd "C-n") 'company-select-next)
         (define-key company-active-map (kbd "C-p") 'company-select-previous))))
- (isg/time-section "company")
  #+END_SRC
 
  #+BEGIN_SRC emacs-lisp
  (use-package company-racer
    :defer t)
- (isg/time-section "company-racer")
  #+END_SRC
 
 ** deft
@@ -640,7 +619,6 @@ _DEL_: none
          deft-text-mode 'org-mode
          deft-use-filename-as-title t
          deft-auto-save-interval 5.0))
- (isg/time-section "deft")
  #+END_SRC
 
 ** exec-path-from-shell
@@ -662,7 +640,6 @@ _DEL_: none
      (exec-path-from-shell-setenv "RUST_SRC_PATH" (isg/val 'racer-rust-src-path))
      (when (memq window-system '(mac ns))
        (exec-path-from-shell-initialize)))
- (isg/time-section "exec-path-from-shell")
  #+END_SRC
 
 ** flycheck
@@ -686,7 +663,6 @@ _DEL_: none
    ;; (setq flycheck-eslintrc "~/work/seni-web/.eslintrc.json")
    ;; customize flycheck temp file prefix
    (setq-default flycheck-temp-prefix ".flycheck"))
- (isg/time-section "flycheck")
  #+END_SRC
 
 ** highlight thing
@@ -695,7 +671,6 @@ _DEL_: none
    :config
    (setq highlight-thing-delay-seconds 0.5)
    (setq highlight-thing-exclude-thing-under-point t))
- (isg/time-section "highlight-thing")
  #+END_SRC
 
 ** htmlize
@@ -703,7 +678,6 @@ _DEL_: none
  (use-package htmlize
    :pin melpa-stable
    :commands htmlize-buffer)
- (isg/time-section "htmlize")
  #+END_SRC
 
 ** pkg-info
@@ -711,7 +685,6 @@ _DEL_: none
  (use-package pkg-info
    :pin melpa-stable
    :defer t)
- (isg/time-section "pkg-info")
  #+END_SRC
 
 ** popup
@@ -719,7 +692,6 @@ _DEL_: none
  (use-package popup
    :pin melpa-stable
    :defer t)
- (isg/time-section "popup")
  #+END_SRC
 
 ** simple-httpd
@@ -727,7 +699,6 @@ _DEL_: none
  (use-package simple-httpd
    :pin melpa-stable
    :defer t)
- (isg/time-section "simple-httpd")
  #+END_SRC
 
 ** smartparens-config
@@ -804,7 +775,6 @@ _DEL_: none
    ;; (define-key scheme-mode-map (kbd ")") 'sp-up-sexp)
    ;; (define-key clojure-mode-map (kbd ")") 'sp-up-sexp)
    )
- (isg/time-section "smartparens-config")
  #+END_SRC
 
 ** which key
@@ -814,7 +784,6 @@ _DEL_: none
    :demand t
    :config
    (which-key-mode))
- (isg/time-section "which-key")
  #+END_SRC
 
 ** ws-butler
@@ -822,14 +791,24 @@ _DEL_: none
  (use-package ws-butler
    :pin melpa-stable
    :defer t)
- (isg/time-section "ws-butler")
  #+END_SRC
 
 * post setup
 #+BEGIN_SRC emacs-lisp
+(defun isg/frame-setup ()
+  (when (and (isg/val 'frame-r) (isg/val 'frame-l))
+    (setq initial-frame-alist (isg/val 'frame-r)
+          default-frame-alist (isg/val 'frame-l)))
+  (add-to-list 'default-frame-alist
+               (cons 'font
+                     (isg/val 'default-font))))
+
+(defun isg/run-machine-function (property)
+  (let ((fn (isg/val property)))
+    (if fn (funcall fn))))
+
 (isg/frame-setup)
 (isg/run-machine-function 'post-setup-fn)
-(isg/time-section "frame setup")
 #+END_SRC
 
 
@@ -939,7 +918,6 @@ _DEL_: none
    multi-term-program "/bin/bash")))
 
 (new-frame)
-(isg/time-section "global settings")
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
