--- a/isg-init.org
+++ b/isg-init.org
@@ -788,6 +788,17 @@ _DEL_: none
     (let ((fn (isg/val property)))
       (if fn (funcall fn))))
 
+  ;; Make sure it uses UTF-8 across the board
+  (prefer-coding-system 'utf-8)
+  (set-language-environment "UTF-8")
+  (set-default-coding-systems 'utf-8)
+  (set-terminal-coding-system 'utf-8)
+  (set-keyboard-coding-system 'utf-8)
+  (setq locale-coding-system 'utf-8)
+  (setq default-file-name-coding-system 'utf-8)
+  (when (display-graphic-p)
+    (setq x-select-request-type '(UTF8_STRING COMPOUND_TEXT TEXT STRING)))
+
   (isg/frame-setup)
   (isg/run-machine-function 'post-setup-fn)
 
