--- a/isg-init.org
+++ b/isg-init.org
@@ -499,8 +499,8 @@
           ("\\.tsx\\'" . web-mode))
    :init
    (add-hook 'web-mode-hook 'ws-butler-mode)
-   (when (string-equal "tsx" (file-name-extension buffer-file-name))
-         (setup-tide-mode))
+   ;;(when (string-equal "tsx" (file-name-extension buffer-file-name))
+   ;;(setup-tide-mode))
    (defadvice web-mode-highlight-part (around tweak-jsx activate)
      (if (equal web-mode-content-type "jsx")
          (let ((web-mode-enable-part-face nil))
